src/test/deca/avecObjet/valid/this_field_assign_float_from_int_conv.deca
// Description :
//    Affectation d'un int dans un champ float via this (ConvFloat).
//
// Resultats :
//    OK

class A {
    float f;

    void set() {
        this.f = 7;
    }
}

{
}

