src/test/deca/avecObjet/invalid/illegal_this_in_main_assignment.deca
// Description :
//    Affectation via this dans le programme principal.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    this.x = 3;
}

